- gulp Watch와 BrowserSync 완료

--- a/assets/guide.html
+++ b/assets/guide.html
@@ -213,6 +213,91 @@
 				</div>
 			</textarea>
 		</div>
+		<div class="uk_gist_code_box full_code_layer" data-filename="gulpfile.js" data-tit="app.js">
+					<textarea>
+						// plug-in 연결
+						const gulp = require("gulp");                   // gulp 연결
+						const Fiber = require('fibers');                // dart sass 이용시 gulp-sass와 세트 플러그인
+						const dartSass = require('dart-sass');          // dart-sass 연결(기본)
+						const scss = require('gulp-sass');              // gulp-sass 연결(기본)
+						const sourcemaps = require('gulp-sourcemaps');  // css.map 파일 생성용
+						var nodemon = require('gulp-nodemon');          // 파일 변경이 감지될 때 자동으로 재시작
+
+
+						// 소스 파일 경로
+						const src = './src';
+						const dist = './dist';
+						const assets = '/assets';
+						// 작업폴더 경로 ('src'에서 작업한 것을)
+						const PATH = {
+							HTML: src + '/html',
+							ASSETS: {
+								CSS: src + assets + '/css',
+								FONTS: src + assets + '/fonts',
+								IMAGES: src + assets + '/images',
+								JS: src + assets + '/js',
+							}
+						}
+						// 산출물 경로 ('dist'에 생성한다.)
+						const DEST_PATH = {
+							HTML: dist,
+							ASSETS: {
+								CSS: dist + assets +'/css',
+								FONTS: dist + assets +'/fonts',
+								IMAGES: dist + assets +'/images',
+								JS: dist + assets +'/js',
+							}
+						};
+
+						//scss 컴파일
+						gulp.task('scss:compile', () => {
+							return new Promise(resolve => {
+								const options = {
+									//scss 옵션 정의
+									scss : {
+										outputStyle: "expanded",  // 컴파일 스타일: nested(default), expanded, compact, compressed
+										indentType: "space",      // 들여쓰기 스타일: space(default), tab
+										indentWidth: 2,           // 들여쓰기 칸 수 (Default : 2)
+										precision: 8,             // 컴파일 된 CSS 의 소수점 자리수 (Type : Integer , Default : 5)
+										sourceComments: true,     // 코멘트 제거 여부 (Default : false)
+										compiler: dartSass,       // 컴파일 도구
+										fiber: Fiber,             // 컴파일 오버해드 방지
+									},
+								};
+								gulp
+									.src( PATH.ASSETS.CSS + '/*.scss' )                      // 컴파일 대상 scss파일 찾기
+									.pipe( sourcemaps.init() )                               // 소스맵 작성
+									.pipe( scss(options.scss).on('error', scss.logError) )   // scss 옵션 적용, scss 작성시 watch가 멈추지 않도록 logError 설정
+									.pipe( sourcemaps.write('') )                            // 위에서 생성한 소스맵 적용
+									.pipe( gulp.dest(DEST_PATH.ASSETS.CSS) );                // 컴파일 후 css파일이 생성될 목성지 설정
+								resolve();
+							});
+						});
+
+						// html 빌드
+						gulp.task('html', () => {
+							return new Promise(resolve => {
+								gulp.src(PATH.HTML + '/*.html')
+								.pipe(gulp.dest(DEST_PATH.HTML));
+								resolve();
+							});
+						});
+
+						//app.js 파일을 참조하여 express 서버 구동
+						gulp.task('nodemon:start', () => {
+							return new Promise(resolve => {
+								nodemon({
+									script: 'app.js',
+									watch: 'app'
+								});
+								resolve();
+							});
+						});
+
+						//실행
+						gulp.task( 'default', gulp.series(['scss:compile', 'html', 'nodemon:start']));
+					</textarea>
+		</div>
 		<!-- 오류가 있을 시 data-ex 사용하여 별도 script 작업 -->
 		<div class="uk_gist_code_box indent mt_s" data-tit="sub element" data-ex="sub">
 				<textarea readonly="readonly">
