--- a/assets/06-framework/01-gulp/03-html_webserver.html
+++ b/assets/06-framework/01-gulp/03-html_webserver.html
@@ -88,6 +88,8 @@
 						//
 						const nodemon = require('gulp-nodemon'); // --add--
 
+						// --no_change-- autoprefixer 옵션: 브라우저 버전 지정
+
 						// --no_change-- 소스 파일 경로
 
 						// --no_change-- scss 컴파일
@@ -115,7 +117,16 @@
 						const dartSass = require('dart-sass');          // dart-sass 연결(기본)
 						const scss = require('gulp-sass');              // gulp-sass 연결(기본)
 						const sourcemaps = require('gulp-sourcemaps');  // css.map 파일 생성용
-						const nodemon = require('gulp-nodemon');
+						const minificss = require('gulp-minify-css');   // css 압축
+						const autoprefixer = require('autoprefixer');   // 고려할 브라우저 버전 설정
+						const postCss = require('gulp-postcss');        // 설정한 브라우저에 버전에 맞춰 css 컴파일
+						const nodemon = require('gulp-nodemon');        // 파일 변경이 감지될 때 자동으로 재시작
+
+						// autoprefixer 옵션: 브라우저 버전 지정
+						const apfBrwsowsers = [
+							'ie > 0', 'chrome > 0', 'firefox > 0'  // 브라우저의 모든 버전 적용
+							//'last 2 versions'                    // 최신 브라우저 기준 하위 2개의 버전까지 적용
+						];
 
 						// 소스 파일 경로
 						const src = './src/assets';
@@ -158,6 +169,8 @@
 									.src( PATH.ASSETS.CSS + '/*.scss' )                      // 컴파일 대상 scss파일 찾기
 									.pipe( sourcemaps.init() )                               // 소스맵 작성
 									.pipe( scss(options.scss).on('error', scss.logError) )   // scss 옵션 적용, scss 작성시 watch가 멈추지 않도록 logError 설정
+									.pipe( postCss(options.postcss) )                        // 하위 브라우저 고려
+									.pipe( minificss() )                                     // css 압축 (압축 시 options.scss의 outputStyle, indentType, indentWidth, precision은 의미가 없게 된다.)
 									.pipe( sourcemaps.write('') )                            // 위에서 생성한 소스맵 적용
 									.pipe( gulp.dest(DEST_PATH.ASSETS.CSS) );                // 컴파일 후 css파일이 생성될 목성지 설정
 								resolve();
@@ -252,6 +265,10 @@
 						// --no_change-- plug-in 연결
 						//
 
+						//
+						// --no_change-- autoprefixer 옵션: 브라우저 버전 지정
+						//
+
 						// --edit-- 소스 파일 경로
 						const src = './src';
 						const dist = './dist';
@@ -306,8 +323,16 @@
 						const dartSass = require('dart-sass');          // dart-sass 연결(기본)
 						const scss = require('gulp-sass');              // gulp-sass 연결(기본)
 						const sourcemaps = require('gulp-sourcemaps');  // css.map 파일 생성용
-						const nodemon = require('gulp-nodemon');          // 파일 변경이 감지될 때 자동으로 재시작
+						const minificss = require('gulp-minify-css');   // css 압축
+						const autoprefixer = require('autoprefixer');   // 고려할 브라우저 버전 설정
+						const postCss = require('gulp-postcss');        // 설정한 브라우저에 버전에 맞춰 css 컴파일
+						const nodemon = require('gulp-nodemon');        // 파일 변경이 감지될 때 자동으로 재시작
 
+						// autoprefixer 옵션: 브라우저 버전 지정
+						const apfBrwsowsers = [
+							'ie > 0', 'chrome > 0', 'firefox > 0'  // 브라우저의 모든 버전 적용
+							//'last 2 versions'                    // 최신 브라우저 기준 하위 2개의 버전까지 적용
+						];
 
 						// 소스 파일 경로
 						const src = './src';
@@ -353,8 +378,10 @@
 									.src( PATH.ASSETS.CSS + '/*.scss' )                      // 컴파일 대상 scss파일 찾기
 									.pipe( sourcemaps.init() )                               // 소스맵 작성
 									.pipe( scss(options.scss).on('error', scss.logError) )   // scss 옵션 적용, scss 작성시 watch가 멈추지 않도록 logError 설정
+									.pipe( postCss(options.postcss) )                        // 하위 브라우저 고려
+									.pipe( minificss() )                                     // css 압축 (압축 시 options.scss의 outputStyle, indentType, indentWidth, precision은 의미가 없게 된다.)
 									.pipe( sourcemaps.write('') )                            // 위에서 생성한 소스맵 적용
-									.pipe( gulp.dest(DEST_PATH.ASSETS.CSS) );                // 컴파일 후 css파일이 생성될 목성지 설정
+									.pipe( gulp.dest(DEST_PATH.ASSETS.CSS) )                 // 컴파일 후 css파일이 생성될 목적지 설정
 								resolve();
 							});
 						});
