- gulp html include 완료

--- a/assets/06-framework/01-gulp/05-html_include.html
+++ b/assets/06-framework/01-gulp/05-html_include.html
@@ -22,11 +22,11 @@
 	<section class="indent mt_xxl">
 		<h2 class="ml_mn">1.5.1. gulp-file-include 문법</h2>
 		<p class="mt_ms">
-			패키지 설지와 적용에 앞서 문법을 먼저 알아보겠습니다.<br>
+			패키지 설치와 적용에 앞서 문법을 먼저 알아보겠습니다.<br>
 			gulp-file-include에는 문법은 기본으로 include 그리고 var, if, for 이렇게 4가지가 있습니다.
 		</p>
 		<p class="mt_s t_blue">
-			javascript 기본 문법이 익숙하지 않은 상황이면 <mark>gulp-file-include</mark>의 모든 기능을 활용하는데에 다소 어려움이 있을 수 있습니다. 최소한의 문법을 미리 숙지하는 것을 추천합니다.
+			javascript 기본 문법이 익숙하지 않은 상황이면 <mark>gulp-file-include</mark>의 모든 기능을 활용하는데에 다소 어려움이 있을 수 있습니다. 최소한의 javascript 문법을 미리 숙지하는 것을 추천합니다.
 		</p>
 
 		<!-- @@include -->
@@ -410,7 +410,11 @@
 				<article class="indent mt_l">
 					<h4 class="ml_mn">page > sub.html 파일 생성</h4>
 					<p class="mt_s">
-						sub.html 파일을 아래처럼 생성합니다.
+						sub.html 파일을 아래처럼 생성합니다.<br>
+						index.html과 달리 include 경로 앞에 점(.)이 하나 더 있습니다.
+						include 템플릿의 위치와 include 하려는 파일의 위치를 잘 알아야 합니다.<br>
+						index.html은 '_include' 폴더와 형제이기 때문에 './_include' 이렇게 시작하지만<br>
+						sub.html은 부모 폴더가 '_include' 폴더와 형제이기 때문에 '../_include' 이렇게 시작해야 합니다. '../'를 사용하므로써 자신의 위치에서 한단계 위로 올라가는 것입니다.
 					</p>
 					<div class="uk_gist_code_box mt_ms" data-filename="sub.html" data-tit="sub.html">
 						<textarea>
