- gulp html include 완료

--- a/assets/06-framework/01-gulp/02-gulp_scss.html
+++ b/assets/06-framework/01-gulp/02-gulp_scss.html
@@ -147,9 +147,10 @@
 						npm install gulp-minify-css -D     // css 압축
 						npm install autoprefixer@9.8.5 -D  // 고려할 브라우저 버전 설정
 						npm install gulp-postcss -D        // 설정한 브라우저에 버전에 맞춰 css 컴파일
+						npm install gulp-rename -D         // 파일 이름 변경
 
 						// shorthand
-						npm install -D gulp-sass gulp-sourcemaps dart-sass fibers gulp-minify-css gulp-postcss autoprefixer@9.8.5  //위 7줄 코드를 한줄로
+						npm install -D gulp-sass gulp-sourcemaps dart-sass fibers gulp-minify-css gulp-postcss autoprefixer@9.8.5 gulp-rename  //위 7줄 코드를 한줄로
 					</textarea>
 				</div>
 			</li>
@@ -171,6 +172,7 @@
 						const minificss = require('gulp-minify-css');   // css 압축
 						const autoprefixer = require('autoprefixer');   // 고려할 브라우저 버전 설정
 						const postCss = require('gulp-postcss');        // 설정한 브라우저에 버전에 맞춰 css 컴파일
+						const rename = require('gulp-rename');          // 파일 이름 변경
 
 						// autoprefixer 옵션: 브라우저 버전 지정
 						const apfBrwsowsers = [
@@ -215,14 +217,18 @@
 										fiber: Fiber,             // 컴파일 오버해드 방지
 									},
 								};
-								gulp
-									.src( PATH.ASSETS.CSS + '/*.scss' )                      // 컴파일 대상 scss파일 찾기
-									.pipe( sourcemaps.init() )                               // 소스맵 작성
-									.pipe( scss(options.scss).on('error', scss.logError) )   // scss 옵션 적용, scss 작성시 watch가 멈추지 않도록 logError 설정
-									.pipe( postCss(options.postcss) )                        // 하위 브라우저 고려
-									.pipe( minificss() )                                     // css 압축 (압축 시 options.scss의 outputStyle, indentType, indentWidth, precision은 의미가 없게 된다.)
-									.pipe( sourcemaps.write('') )                            // 위에서 생성한 소스맵 적용
-									.pipe( gulp.dest(DEST_PATH.ASSETS.CSS) );                // 컴파일 후 css파일이 생성될 목성지 설정
+								gulp.src( PATH.ASSETS.CSS + '/*.scss' )                   // 컴파일 대상 scss파일 찾기
+									// *.css 생성
+									.pipe( sourcemaps.init() )                              // 소스맵 작성
+									.pipe( scss(options.scss).on('error', scss.logError) )  // scss 옵션 적용, scss 작성시 watch가 멈추지 않도록 logError 설정
+									.pipe( postCss(options.postcss) )                       // 하위 브라우저 고려
+									.pipe( sourcemaps.write() )                             // 소스맵 적용
+									.pipe( gulp.dest(DEST_PATH.ASSETS.CSS) )                // 컴파일 후 css파일이 생성될 목적지 설정
+									// *.min.css 생성
+									.pipe( minificss() )                                    // 컴파일된 css 압축
+									.pipe( rename({ suffix: '.min' }) )                     // 압축파일 *.min.css 생성
+									.pipe( sourcemaps.write() )                             // 소스맵 적용
+									.pipe( gulp.dest(DEST_PATH.ASSETS.CSS) )                // 컴파일 후 css파일이 생성될 목적지 설정
 								resolve();
 							});
 						});
@@ -282,7 +288,9 @@
 				<p class="mt_ms"><img src="ukncs/images/gulp/gulp_t_scss_01.png" alt="gulp 실행"/></p>
 
 				<p class="mt_ms">
-					<mark>dist</mark>폴더와 방금 컴파일 된 <mark>style.css</mark> 그리고 css 디버깅을 위한 <mark>style.css.map</mark>이 생성되있는 것을 확인할 수 있으며,
+					<!--<mark>dist</mark>폴더와 방금 컴파일 된 <mark>style.css</mark> 그리고 css 디버깅을 위한 <mark>style.css.map</mark>이 생성되있는 것을 확인할 수 있으며,-->
+					<mark>dist</mark>폴더와 방금 컴파일 된 <mark>style.css</mark> 그리고 압축 버전인 <mark>style.min.css</mark>이 생성되있는 것을 확인할 수 있습니다.<br>
+					디버깅을 위한 <mark>css map</mark>은 <mark>style.css</mark>, <mark>style.min.css</mark> 파일 안에 적용되어 있습니다.
 				</p>
 				<p class="mt_ms"><img src="ukncs/images/gulp/gulp-file-04.png" alt="dist폴더, style.css, style.css.map 생성"/></p>
 
@@ -328,7 +336,7 @@
 							        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 						}
 
-						/* 압축까지 적용된 후 (style.css) ------------------------------------------------ */
+						/* 압축까지 적용된 후 (style.min.css) ------------------------------------------------ */
 						html{overflow-y:auto}html body{background:gray;color:#fff}.box{display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex;-webkit-box-shadow:0 0 10px rgba(0,0,0,.5);-moz-box-shadow:0 0 10px rgba(0,0,0,.5);box-shadow:0 0 10px rgba(0,0,0,.5)}
 					</textarea>
 				</div>
