--- a/assets/06-framework/01-gulp/05-layout_part2.html
+++ b/assets/06-framework/01-gulp/05-layout_part2.html
@@ -8,17 +8,29 @@
 	<blockquote class="uk_note mt_xxl" role="note">
 		<h2 class="sound_only">요약 설명</h2>
 		<p>
+			<b class="t_blue">layout nunjucks-render</b> 에서는<br>
+			<span class="t_black">gulp-nunjucks-render</span>를 이용하여 html 구조를 설정하는 내용을 다루고 있습니다.
+		</p>
+		<p class="mt_ms">
 			PHP, ASP, JSP같은 서버 사이드 언어(Server-side Programming Language)는 include라는 기능 제공하여 반복되는 마크업을 최소화 하고,
 			유지보수 또한 매우 편리하게 할 수 있습니다.<br>
 			하지만 html은 include 언어를 지원하지 않아 양의 페이지를 코딩해야 할 경우 적합하지 않습니다.<br>
-			Gulp는 '<mark>gulp-file-include</mark>'패키지를 이용하여 html의 불편한 요소를 해소할 수 있으며, PHP와 매우 비슷한 include 기능을 지원합니다.<br>
+		</p>
+		<p class="mt_ms">
+			<mark>gulp-file-include</mark>와 <mark>gulp-nunjucks-render</mark>는 비슷한 문법과 기능을 가지고 있지만,<br>
+			간단한 홈페이지 제작을 위해서라면 <mark>gulp-file-include를 추천</mark>,<br>
+			보다 복잡하고 여러가지 레이아웃을 가지고 있는 홈페이지 제작을 위해서라면 <mark>gulp-nunjucks-render를 추천</mark>합니다.
+		</p>
+		<p class="mt_ms">
+			Gulp는 '<mark>gulp-nunjucks-render</mark>'패키지를 이용하여 html의 불편한 요소를 해소할 수 있으며, PHP와 매우 비슷한 include 기능을 지원합니다.<br>
 			이번 페이지에서는 '<mark>gulp-file-include</mark>'를 이용한 간단한 include 방법과
-			'<mark>gulp-file-include</mark>'에서 지원하는 <mark>variable</mark>, <mark>if</mark>, <mark>for</mark>문을 활용하는 방법에 대해 알아보는 시간을 가집니다.
+			'<mark>gulp-file-include</mark>'에서 지원하는 <mark>variable</mark>, <mark>if</mark>, <mark>for</mark>문을 활용하는 방법에 대해 알아보는 시간을 가집니다.<br>
+			또한 layout tamplate을 제작 및 활용하는 편리한 방법도 알아봅니다.
 		</p>
 	</blockquote>
 
-
-	<!-- 1.5.1. gulp-file-include 문법 -->
+<!--
+	&lt;!&ndash; 1.5.1. gulp-file-include 문법 &ndash;&gt;
 	<section class="indent mt_xxl">
 		<h2 class="ml_mn">1.5.1. gulp-file-include 문법</h2>
 		<p class="mt_ms">
@@ -29,7 +41,7 @@
 			javascript 기본 문법이 익숙하지 않은 상황이면 <mark>gulp-file-include</mark>의 모든 기능을 활용하는데에 다소 어려움이 있을 수 있습니다. 최소한의 javascript 문법을 미리 숙지하는 것을 추천합니다.
 		</p>
 
-		<!-- @@include -->
+		&lt;!&ndash; @@include &ndash;&gt;
 		<article class="indent mt_l">
 			<h3 class="ml_mn">@@include('템플릿 파일 위치')</h3>
 			<p class="mt_s">
@@ -48,7 +60,7 @@
 			</div>
 		</article>
 
-		<!-- @@var -->
+		&lt;!&ndash; @@var &ndash;&gt;
 		<article class="indent mt_l">
 			<h3 class="ml_mn">@@var</h3>
 			<p class="mt_s">
@@ -61,7 +73,7 @@
 			</div>
 		</article>
 
-		<!-- @@if -->
+		&lt;!&ndash; @@if &ndash;&gt;
 		<article class="indent mt_l">
 			<h3 class="ml_mn">@@if</h3>
 			<p class="mt_s">
@@ -77,7 +89,7 @@
 			</div>
 		</article>
 
-		<!-- @@for -->
+		&lt;!&ndash; @@for &ndash;&gt;
 		<article class="indent mt_l">
 			<h3 class="ml_mn">@@for</h3>
 			<p class="mt_s">
@@ -95,7 +107,7 @@
 			</div>
 			<div class="uk_gist_code_box mt_ms" data-tit="@@for">
 				<textarea>
-					// 적용 사례
+					&lt;!&ndash; 적용 사례 &ndash;&gt;
 					<nav class="content">
 						<ul>
 							@@for (var i = 0; i < arr.length; i++) {
@@ -107,8 +119,8 @@
 			</div>
 			<div class="uk_gist_code_box mt_ms" data-tit="@@for build">
 				<textarea>
-					// 빌드 후 결과
-					<div class="content">
+					&lt;!&ndash; 빌드 후 결과 &ndash;&gt;
+					<nav class="content">
 						<ul>
 							<li>아이템1</li>
 							<li>아이템2</li>
@@ -121,12 +133,12 @@
 	</section>
 
 
-	<!-- 1.5.2. gulp-file-include 설치 및 적용 -->
+	&lt;!&ndash; 1.5.2. gulp-file-include 설치 및 적용 &ndash;&gt;
 	<section class="indent mt_xxl">
 		<h2 class="ml_mn">1.5.2. gulp-file-include 설치 및 적용</h2>
 
 		<ol class="ol_lst">
-			<!-- 패키지 설치 -->
+			&lt;!&ndash; 패키지 설치 &ndash;&gt;
 			<li class="tit_h3 mt_xl">
 				<h3>패키지 설치</h3>
 				<p class="mt_ms">
@@ -144,7 +156,7 @@
 				</div>
 			</li>
 
-			<!-- gulpfile.js 파일 수정 -->
+			&lt;!&ndash; gulpfile.js 파일 수정 &ndash;&gt;
 			<li class="tit_h3 mt_xl">
 				<h3>gulpfile.js 파일 수정</h3>
 				<p class="mt_ms">
@@ -156,20 +168,20 @@
 						//
 						// 생략...
 						//
-						const fileinclude = require('gulp-file-include');  // --add--
-						const htmlmin = require('gulp-htmlmin');           // --add--
+						const fileinclude = require('gulp-file-include');  // &#45;&#45;add&#45;&#45;
+						const htmlmin = require('gulp-htmlmin');           // &#45;&#45;add&#45;&#45;
 
-						// --no_change-- autoprefixer 옵션: 브라우저 버전 지정
+						// &#45;&#45;no_change&#45;&#45; autoprefixer 옵션: 브라우저 버전 지정
 
-						// --no_change-- 소스 파일 경로
+						// &#45;&#45;no_change&#45;&#45; 소스 파일 경로
 
-						// --no_change-- scss 컴파일
+						// &#45;&#45;no_change&#45;&#45; scss 컴파일
 
 						// html 빌드
 						gulp.task('html', () => {
 							return new Promise(resolve => {
-								//gulp.src(PATH.HTML + '/*.html') --del--
-								--add_start--
+								//gulp.src(PATH.HTML + '/*.html') &#45;&#45;del&#45;&#45;
+								&#45;&#45;add_start&#45;&#45;
 								gulp.src([
 									PATH.HTML + '/**/*',             // 불러올 파일의 위치
 									'!' + PATH.HTML + '/**/_*',      // '_'로 시작하는 폴더 제외
@@ -181,20 +193,20 @@
         						indent : true                  //include 되는 tab 사이즈에 맞춰 들여쓰기 적용
 									}))
       						.pipe( htmlmin({collapseWhitespace: true, removeComments: true}) )  // html 압축 및 주석 제거
-								--add_end--
-									.pipe( gulp.dest(DEST_PATH.HTML) )            --no_change--
-									.pipe( browserSync.reload({stream: true}) );  --no_change--
+								&#45;&#45;add_end&#45;&#45;
+									.pipe( gulp.dest(DEST_PATH.HTML) )            &#45;&#45;no_change&#45;&#45;
+									.pipe( browserSync.reload({stream: true}) );  &#45;&#45;no_change&#45;&#45;
 								resolve();
 							});
 						});
 
-						// --no_change-- app.js 파일을 참조하여 express 서버 구동
+						// &#45;&#45;no_change&#45;&#45; app.js 파일을 참조하여 express 서버 구동
 
-						// --no_change-- 변경, 추가되는 파일을 감지하여 자동 빌드
+						// &#45;&#45;no_change&#45;&#45; 변경, 추가되는 파일을 감지하여 자동 빌드
 
-						// --no_change-- 빌드된 내용을 브라우저에 반영
+						// &#45;&#45;no_change&#45;&#45; 빌드된 내용을 브라우저에 반영
 
-						// --no_change-- 실행
+						// &#45;&#45;no_change&#45;&#45; 실행
 					</textarea>
 				</div>
 				<div class="uk_gist_code_box full_code_layer" data-filename="gulpfile.js" data-tit="gulpfile.js">
@@ -346,29 +358,29 @@
 				</div>
 				<p class="mt_ms">
 					html 빌드 task를 변경하였습니다.<br>
-					<!--
+					&lt;!&ndash;
 					'_'로 시작하는 폴더를 제외하는 이유는 include 템플릿을 '_include' 폴더에 생성할 것이고,
 					include 템플릿은 각각의 html파일에 병합되어 빌드가 되기 때문에
 					'dist' 폴더에 따로 빌드가 될 필요가 없습니다.
-					-->
-					<!--
+					&ndash;&gt;
+					&lt;!&ndash;
 					gulp 실행 시 include 템플릿은 다른 html이나 html내의 폴더와 파일처럼 빌드가 될 필요가 없습니다.
 					이유는 include 템플릿은 각각의 html파일에 병합되어 빌드가 되기 때문입니다.<br>
-					-->
+					&ndash;&gt;
 					gulp 실행 시 include 템플릿은 각각의 html파일에 병합되어 빌드가 되기 때문에 따로 빌드가 될 필요가 없습니다.<br>
 					그래서 '_'시작하는 폴더와 하위 파일들은 빌드에서 제외 시키는 설정을 추가로 하였고,
 					include 템플릿을 '_include' 폴더에 생성하여 빌드에서 제외하게 할 예정입니다.
 				</p>
 			</li>
 
-			<!-- sub.html 생성 및 include 템플릿 생성 -->
+			&lt;!&ndash; sub.html 생성 및 include 템플릿 생성 &ndash;&gt;
 			<li class="tit_h3 mt_xl">
 				<h3>sub.html 생성 및 include 템플릿 생성</h3>
 				<p class="mt_ms">
 					include 기능을 테스트 하기 위해 필요한 파일을 생성합니다.
 				</p>
 
-				<!-- 파일 구조 -->
+				&lt;!&ndash; 파일 구조 &ndash;&gt;
 				<article class="indent mt_l">
 					<h4 class="ml_mn">파일 구조</h4>
 					<p class="mt_s">
@@ -379,7 +391,7 @@
 					<p class="mt_ms"><img src="ukncs/images/gulp/gulp-file-include_srart.png" alt="html 폴더 파일 구조"/></p>
 				</article>
 
-				<!-- index.html 파일 수정 -->
+				&lt;!&ndash; index.html 파일 수정 &ndash;&gt;
 				<article class="indent mt_l">
 					<h4 class="ml_mn">index.html 파일 수정</h4>
 					<p class="mt_s">
@@ -389,31 +401,31 @@
 						<textarea>
 							<!DOCTYPE html>
 							<html lang="ko">
-								<!-- head include -->
+								&lt;!&ndash; head include &ndash;&gt;
 								@@include('./_include/head.html', {
 									main_page : true,
 									title_text : 'Gulp setting'
 								})
 								<body>
 									<div class="wrap">
-										<!-- header include -->
+										&lt;!&ndash; header include &ndash;&gt;
 										@@include('./_include/header.html', {
 											h1_text : 'Main page 입니다.'
 										})
 										&nbsp;
 										<p>main content</p>
 										&nbsp;
-										<!-- footer include -->
+										&lt;!&ndash; footer include &ndash;&gt;
 										@@include('./_include/footer.html')
 									</div>
-									<!-- //wrap -->
+									&lt;!&ndash; //wrap &ndash;&gt;
 									</body>
 							</html>
 						</textarea>
 					</div>
 				</article>
 
-				<!-- page > sub.html 파일 생성 -->
+				&lt;!&ndash; page > sub.html 파일 생성 &ndash;&gt;
 				<article class="indent mt_l">
 					<h4 class="ml_mn">page > sub.html 파일 생성</h4>
 					<p class="mt_s">
@@ -427,31 +439,31 @@
 						<textarea>
 							<!DOCTYPE html>
 							<html lang="ko">
-								<!-- head include -->
+								&lt;!&ndash; head include &ndash;&gt;
 								@@include('../_include/head.html', {
 									main_page : false,
 									title_text : 'Sub page'
 								})
 								<body>
 									<div class="wrap">
-										<!-- header include -->
+										&lt;!&ndash; header include &ndash;&gt;
 										@@include('../_include/header.html', {
 											h1_text : 'Sub page 입니다.'
 										})
 										&nbsp;
 										<p>sub content</p>
 										&nbsp;
-										<!-- footer include -->
+										&lt;!&ndash; footer include &ndash;&gt;
 										@@include('../_include/footer.html')
 									</div>
-									<!-- //wrap -->
+									&lt;!&ndash; //wrap &ndash;&gt;
 								</body>
 							</html>
 						</textarea>
 					</div>
 				</article>
 
-				<!-- _include > head.html 파일 생성 -->
+				&lt;!&ndash; _include > head.html 파일 생성 &ndash;&gt;
 				<article class="indent mt_l">
 					<h4 class="ml_mn">_include > head.html 파일 생성</h4>
 					<p class="mt_s">
@@ -466,11 +478,11 @@
 						<textarea>
 							<head>
 								<meta charset="UTF-8">
-								<!-- 메인 페이지 일 때 -->
+								&lt;!&ndash; 메인 페이지 일 때 &ndash;&gt;
 								@@if ( main_page === true ) {
 									<title>@@title_text</title>
 								}
-								<!-- 메인 페이지가 아닐 때(서브 페이지 일 때) -->
+								&lt;!&ndash; 메인 페이지가 아닐 때(서브 페이지 일 때) &ndash;&gt;
 								@@if ( main_page === false ) {
 									<title>@@title_text | Gulp setting</title>
 								}
@@ -488,7 +500,7 @@
 					</p>
 				</article>
 
-				<!-- _include > header.html 파일 생성 -->
+				&lt;!&ndash; _include > header.html 파일 생성 &ndash;&gt;
 				<article class="indent mt_l">
 					<h4 class="ml_mn">_include > header.html 파일 생성</h4>
 					<p class="mt_s">
@@ -512,7 +524,7 @@
 					</div>
 				</article>
 
-				<!-- _include > nav.html 파일 생성 -->
+				&lt;!&ndash; _include > nav.html 파일 생성 &ndash;&gt;
 				<article class="indent mt_l">
 					<h4 class="ml_mn">_include > nav.html 파일 생성</h4>
 					<p class="mt_s">
@@ -532,7 +544,7 @@
 					</div>
 				</article>
 
-				<!-- _include > footer.html 파일 생성 -->
+				&lt;!&ndash; _include > footer.html 파일 생성 &ndash;&gt;
 				<article class="indent mt_l">
 					<h4 class="ml_mn">_include > footer.html 파일 생성</h4>
 					<p class="mt_s">
@@ -547,7 +559,7 @@
 					</div>
 				</article>
 
-				<!-- style.scss 파일 수정 -->
+				&lt;!&ndash; style.scss 파일 수정 &ndash;&gt;
 				<article class="indent mt_l">
 					<h4 class="ml_mn">style.scss 파일 수정</h4>
 					<p class="mt_s">
@@ -583,7 +595,7 @@
 				</article>
 			</li>
 
-			<!-- gulp 실행 후 웹서버 확인 -->
+			&lt;!&ndash; gulp 실행 후 웹서버 확인 &ndash;&gt;
 			<li class="tit_h3 mt_xl">
 				<h3>gulp 실행 후 웹서버 확인</h3>
 				<p class="mt_ms">
@@ -610,10 +622,10 @@
 				</p>
 				<div class="uk_gist_code_box mt_ms" data-filename="index.html" data-tit="index.html">
 					<textarea>
-						<!-- 압축 전 ----------------------------- -->
+						&lt;!&ndash; 압축 전 -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;
 						<!DOCTYPE html>
 						<html lang="ko">
-							<!-- head include -->
+							&lt;!&ndash; head include &ndash;&gt;
 							<head>
 								<meta charset="UTF-8">
 								<title>Gulp setting</title>
@@ -623,7 +635,7 @@
 							</head>
 							<body>
 								<div class="wrap">
-									<!-- header include -->
+									&lt;!&ndash; header include &ndash;&gt;
 									<header class="header">
 									<h1>Main page 입니다.</h1>
 										<nav class="nav">
@@ -634,25 +646,25 @@
 									&nbsp;
 									<p>main content</p>
 									&nbsp;
-									<!-- footer include -->
+									&lt;!&ndash; footer include &ndash;&gt;
 									<footer class="footer">
 										footer 영역 입니다.
 									</footer>
 								</div>
-								<!-- //wrap -->
+								&lt;!&ndash; //wrap &ndash;&gt;
 							</body>
 						</html>
 
-						<!-- 압축 후(실제 dist 빌드) ----------------------------- -->
+						&lt;!&ndash; 압축 후(실제 dist 빌드) -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;
 						<!DOCTYPE html><html lang="ko"><head><meta charset="UTF-8"><title>Gulp setting</title><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><link rel="stylesheet" href="./assets/css/style.css"></head><body><div class="wrap"><header class="header"><h1>Main page 입니다.</h1><nav class="nav"><a href="/">main page</a> <a href="/page/sub.html">sub page</a></nav></header><p>main content</p><footer class="footer">footer 영역 입니다.</footer></div></body></html>
 					</textarea>
 				</div>
 				<div class="uk_gist_code_box mt_ms" data-filename="sub.html" data-tit="sub.html">
 					<textarea>
-						<!-- 압축 전 ----------------------------- -->
+						&lt;!&ndash; 압축 전 -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;
 						<!DOCTYPE html>
 						<html lang="ko">
-							<!-- head include -->
+							&lt;!&ndash; head include &ndash;&gt;
 							<head>
 								<meta charset="UTF-8">
 								<title>Sub page | Gulp setting</title>
@@ -662,7 +674,7 @@
 							</head>
 							<body>
 								<div class="wrap">
-									<!-- header include -->
+									&lt;!&ndash; header include &ndash;&gt;
 									<header class="header">
 									<h1>Sub page 입니다.</h1>
 										<nav class="nav">
@@ -673,22 +685,22 @@
 									&nbsp;
 									<p>sub content</p>
 									&nbsp;
-									<!-- footer include -->
+									&lt;!&ndash; footer include &ndash;&gt;
 									<footer class="footer">
 										footer 영역 입니다.
 									</footer>
 								</div>
-								<!-- //wrap -->
+								&lt;!&ndash; //wrap &ndash;&gt;
 							</body>
 						</html>
 
-						<!-- 압축 후(실제 dist 빌드) ----------------------------- -->
+						&lt;!&ndash; 압축 후(실제 dist 빌드) -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45; &ndash;&gt;
 						<!DOCTYPE html><html lang="ko"><head><meta charset="UTF-8"><title>Sub page | Gulp setting</title><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><link rel="stylesheet" href="../assets/css/style.css"></head><body><div class="wrap"><header class="header"><h1>Sub page 입니다.</h1><nav class="nav"><a href="/">main page</a> <a href="/page/sub.html">sub page</a></nav></header><p>sub content</p><footer class="footer">footer 영역 입니다.</footer></div></body></html>
 					</textarea>
 				</div>
 			</li>
 		</ol>
-	</section>
+	</section>-->
 
 
 
