- gulp 속도 개선과 파일 및 오류 관리 작업 중

--- a/assets/06-framework/01-gulp/02-gulp_scss.html
+++ b/assets/06-framework/01-gulp/02-gulp_scss.html
@@ -214,7 +214,7 @@
 							}
 						};
 
-						//scss 컴파일
+						// scss 컴파일
 						gulp.task('scss:compile', () => {
 							return new Promise(resolve => {
 								const options = {
@@ -245,7 +245,7 @@
 							});
 						});
 
-						//실행
+						// default : 실행
 						gulp.task( 'default', gulp.series(['scss:compile']));
 					</textarea>
 				</div>
