--- a/assets/06-framework/01-gulp/05-layout_part1.html
+++ b/assets/06-framework/01-gulp/05-layout_part1.html
@@ -170,11 +170,15 @@
 						const fileinclude = require('gulp-file-include');  // --add--
 						const htmlmin = require('gulp-htmlmin');           // --add--
 
+
 						// --no_change-- autoprefixer 옵션: 브라우저 버전 지정
+
 
 						// --no_change-- 소스 파일 경로
 
+
 						// --no_change-- scss 컴파일
+
 
 						// html 빌드
 						gulp.task('html', () => {
@@ -199,13 +203,17 @@
 							});
 						});
 
-						// --no_change-- app.js 파일을 참조하여 express 서버 구동
 
-						// --no_change-- 변경, 추가되는 파일을 감지하여 자동 빌드
+						// --no_change-- nodemon:start : app.js 파일을 참조하여 express 서버 구동
 
-						// --no_change-- 빌드된 내용을 브라우저에 반영
 
-						// --no_change-- 실행
+						// --no_change-- watch : 변경, 추가되는 파일을 감지하여 자동 빌드
+
+
+						// --no_change-- browserSync : 빌드된 내용을 브라우저에 반영
+
+
+						// --no_change-- default : 실행
 					</textarea>
 				</div>
 				<div class="uk_gist_code_box full_code_layer" data-filename="gulpfile.js" data-tit="gulpfile.js">
@@ -319,7 +327,7 @@
 						});
 
 
-						// app.js 파일을 참조하여 express 서버 구동
+						// nodemon:start : app.js 파일을 참조하여 express 서버 구동
 						gulp.task('nodemon:start', () => {
 							return new Promise(resolve => {
 								nodemon({
@@ -331,7 +339,7 @@
 						});
 
 
-						// 변경, 추가되는 파일을 감지하여 자동 빌드
+						// watch : 변경, 추가되는 파일을 감지하여 자동 빌드
 						gulp.task('watch', () => {
 							return new Promise(resolve => {
 								gulp.watch(PATH.HTML + "/**/*.html", gulp.series(['html']));                //html 폴더 내의 모든 파일 감시
@@ -341,7 +349,7 @@
 						});
 
 
-						// 빌드된 내용을 브라우저에 반영
+						// browserSync : 빌드된 내용을 브라우저에 반영
 						gulp.task('browserSync', () => {
 							return new Promise(resolve => {
 								browserSync.init(null, {
@@ -353,7 +361,7 @@
 						});
 
 
-						// 실행
+						// default : 실행
 						gulp.task( 'default', gulp.series(['scss:compile', 'html', 'nodemon:start', 'browserSync', 'watch']));
 					</textarea>
 				</div>
